Thu Jul 19 15:13:51 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>

        * NEWS:

          Updated with the disconnect fix.

        * orbsvcs/orbsvcs/Notify/Structured/StructuredProxyPushConsumer.cpp:

          Changed to use the newly added send_deletion_change() in the case of
          saving the topology with a deleting object in the disconnect callback.

        * orbsvcs/tests/Notify/Reconnecting/run_test.pl:

          Added the disconnect test on the supplier side too.
					
Thu Jul 19 11:52:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Strategies/SCIOP_Connection_Handler.{h,cpp}:
          Also removed the GIOP Message Lite flag from this class

Wed Jul 18 18:19:47 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * tests/Bug_2084_Regression/tid_to_int.h (ACE_thread_t_to_integer_i):
        * tests/Bug_2084_Regression/tid_to_int.h (ACE_thread_t_to_integer_i):

          Fixed typo that circumvented the intermediate cast to an integer
          large enough to hold the thread ID pointer.

Wed Jul 18 14:36:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Strategies/UIOP_Acceptor.{h,cpp}:
          Fixed unused parameter warning

Wed Jul 18 12:40:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORBInitializer_Registry.cpp:
          Corrected comment

        * tao/ORBInitializer_Registry_Adapter.h:
          Fixed doxygen tags

        * tao/PI/ORBInitializer_Registry_Impl.cpp:
          Layout change

        * tao/BooleanSeq.pidl:
        * tao/CharSeq.pidl:
        * tao/CONV_FRAME.pidl:
        * tao/Current.pidl:
          Updated file header.

Wed Jul 18 12:06:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Acceptor.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Acceptor.h:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Connection_Handler.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Connector.cpp: